# proc-macro-workshop

./: Cargo.toml  main.rs
builder/: Cargo.toml
builder/src/: lib.rs
builder_taint/: Cargo.toml
builder_taint/src/: lib.rs
debug/: Cargo.toml
debug/src/: lib.rs
proc_macro_define_crate/: Cargo.toml
proc_macro_define_crate/src/: lib.rs
seq/: Cargo.toml
seq/src/: lib.rs
