[package]
name = "seq"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
proc-macro2 = { version="1.0.30", features=["span-locations"] }
syn = { version ="1.0.80", features=["full","extra-traits"] }
quote = { version = "1.0.10"}
